--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,34 +15,43 @@ jobs:
       - name: 🛠️ Checkout code
         uses: actions/checkout@v4
 
-      # Step 2: List files in the portfolio folder (for debugging)
-      - name: List files in the portfolio folder (for debugging)
-        run: ls -al portfolio
+      # Step 2: Verify the directory structure for debugging (check if 'portfolio' exists)
+      - name: 🧰 List files for debugging (check 'portfolio')
+        run: |
+          echo "Listing the directory where the repository is cloned:"
+          ls -al
+          echo "Listing 'portfolio' directory:"
+          if [ -d "portfolio" ]; then
+            ls -al portfolio
+          else
+            echo "'portfolio' directory not found!"
+          fi
 
       # Step 3: Set up Docker Buildx
       - name: 🔧 Set up Docker
         uses: docker/setup-buildx-action@v3
 
       # Step 4: Install Docker Compose
-      - name: Install Docker Compose
+      - name: 🐳 Install Docker Compose
         run: |
           curl -L "https://github.com/docker/compose/releases/download/$(curl -s https://api.github.com/repos/docker/compose/releases/latest | jq -r .tag_name)/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           chmod +x /usr/local/bin/docker-compose
 
       # Step 5: Build and start Docker services using docker-compose.yml
-      - name: Build and start services
+      - name: 🔨 Build and start services
         run: |
-          docker compose -f portfolio/docker-compose.yml up -d --build
+          # Ensure 'portfolio/docker-compose.yml' is the correct path
+          docker-compose -f portfolio/docker-compose.yml up -d --build
 
       # Step 6: Run tests (optional)
-      - name: Run tests (optional)
+      - name: ✅ Run tests (optional)
         run: |
           docker-compose -f portfolio/docker-compose.yml exec -T web npm test || true
 
       # Step 7: Stop and clean up Docker services
-      - name: Stop and clean up
+      - name: 🧹 Stop and clean up
         run: |
-          docker compose -f portfolio/docker-compose.yml down
+          docker-compose -f portfolio/docker-compose.yml down
 
   deploy:
     runs-on: ubuntu-latest
@@ -50,18 +59,18 @@ jobs:
 
     steps:
       # Step 1: Checkout the code again for deployment
-      - name: Checkout code for deployment
+      - name: 🛠️ Checkout code for deployment
         uses: actions/checkout@v4
 
       # Step 2: Set up Docker on the server (optional step for deployment)
-      - name: Set up Docker for deployment
+      - name: 🔧 Set up Docker for deployment
         run: |
           curl -fsSL https://get.docker.com | bash
           sudo usermod -aG docker $USER
           sudo systemctl enable --now docker
 
       # Step 3: SSH into the server and deploy (Replace with your actual server details)
-      - name: Deploy to Production (SSH to server)
+      - name: 🚀 Deploy to Production (SSH to server)
         uses: appleboy/ssh-action@v0.1.6
         with:
           host: ${{ secrets.PROD_SERVER_HOST }}
@@ -70,10 +79,10 @@ jobs:
           port: 22
           script: |
             cd /path/to/your/project
-            docker compose -f portfolio/docker-compose.yml down  # Stop old containers (if any)
-            docker compose -f portfolio/docker-compose.yml up -d --build  # Build and start new containers
+            docker-compose -f portfolio/docker-compose.yml down  # Stop old containers (if any)
+            docker-compose -f portfolio/docker-compose.yml up -d --build  # Build and start new containers
 
       # Optional: Post-deployment steps (e.g., notify, or health check)
-      - name: Health Check (Optional)
+      - name: ✅ Health Check (Optional)
         run: |
           curl --fail http://localhost:3000 || exit 1  # Check if the app is running
