--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,18 +34,18 @@ jobs:
       # Step 5: Build and start Docker services using docker-compose.yml
       - name: 🔨 Build and start services
         run: |
-          # Ensure 'portfolio/docker-compose.yml' is the correct path
-          docker-compose -f portfolio/docker-compose.yml up -d --build
+          # Correct path if the docker-compose.yml is inside 'portfolio/portfolio/'
+          docker-compose -f portfolio/portfolio/docker-compose.yml up -d --build
 
       # Step 6: Run tests (optional)
       - name: ✅ Run tests (optional)
         run: |
-          docker-compose -f portfolio/docker-compose.yml exec -T web npm test || true
+          docker-compose -f portfolio/portfolio/docker-compose.yml exec -T web npm test || true
 
       # Step 7: Stop and clean up Docker services
       - name: 🧹 Stop and clean up
         run: |
-          docker-compose -f portfolio/docker-compose.yml down
+          docker-compose -f portfolio/portfolio/docker-compose.yml down
 
   deploy:
     runs-on: ubuntu-latest
@@ -73,8 +73,8 @@ jobs:
           port: 22
           script: |
             cd /path/to/your/project
-            docker-compose -f portfolio/docker-compose.yml down  # Stop old containers (if any)
-            docker-compose -f portfolio/docker-compose.yml up -d --build  # Build and start new containers
+            docker-compose -f portfolio/portfolio/docker-compose.yml down  # Stop old containers (if any)
+            docker-compose -f portfolio/portfolio/docker-compose.yml up -d --build  # Build and start new containers
 
       # Optional: Post-deployment steps (e.g., notify, or health check)
       - name: ✅ Health Check (Optional)
