--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       - name: 🔧 Set up Docker
         uses: docker/setup-buildx-action@v3
 
-       Step 4: Install Docker Compose
+       # Step 4: Install Docker Compose
       - name: 🐳 Install Docker Compose
         run: |
           curl -L "https://github.com/docker/compose/releases/download/$(curl -s https://api.github.com/repos/docker/compose/releases/latest | jq -r .tag_name)/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
