--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,8 @@ jobs:
       - name: 🐳 Build Docker Compose services
         uses: docker/build-push-action@v4
         with:
-          context: ./portfolio/portfolio  # path to folder containing docker-compose.yml
-          file: ./portfolio/portfolio/Dockerfile  # if you have a Dockerfile
+          context: ./portfolio # path to folder containing docker-compose.yml
+          file: ./portfolio/Dockerfile  # if you have a Dockerfile
           push: false  # set true if you want to push to DockerHub
           platforms: linux/amd64,linux/arm64
 
@@ -33,8 +33,8 @@ jobs:
         uses: docker/compose-action@v2
         with:
           project-name: portfolio
-          files: ./portfolio/portfolio/docker-compose.yml
-          detached: true
+          files: ./portfolio/docker-compose.yml
+          #detached: true
           build: true
     
       # Step 7: Stop and clean up Docker services
