--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,10 @@ jobs:
 
       # Step 5: Build and push Docker image using docker-compose
       - name: 🐳 Build Docker Compose services
-        #uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v4
         with:
-          context: ./portfolio # path to folder containing docker-compose.yml
-          file: ./portfolio/Dockerfile  # if you have a Dockerfile
+          context: . # path to folder containing docker-compose.yml
+          file: .  # if you have a Dockerfile
           push: false  # set true if you want to push to DockerHub
           platforms: linux/amd64,linux/arm64
 
