--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
       - name: 🚀 Deploy to Production (SSH to server)
         uses: appleboy/ssh-action@v0.1.6
         with:
-          host: 10.20.40.17 
+          host: ${{ secrets.HEBAIP }} 
           username: "cybersecurity" 
           key: ${{ secrets.SADEELKEY }}
           port: 22
